2014-08-16  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/plot.m: Full rewrite again.

	* arrays/@stk_dataframe/plot.m: Full rewrite again, to improve
	even more compatibility with the base plot function. The case
	where x is an stk_dataframe objects with two or more columns is
	now handled in a way that is consistent with the base plot
	function (i.e., if x has two columns, then we get two 1D plots).

2014-08-15  Julien Bect  <julien.bect@supelec.fr>

	stk_plot1d.m: Add missing documentation.

	* misc/plot/stk_plot1d.m: Add doc.

	@stk_dataframe/plot.m: Full rewrite.

	* arrays/@stk_dataframe/plot.m: Full rewrite to improve
	compatibility with the base plot function. Deprecate the case
	where x is an stk_dataframe objects with two or more columns.

2014-08-14  Julien Bect  <julien.bect@supelec.fr>

	Add missing documentations.

	* arrays/@stk_factorialdesign/ndgrid.m: Add doc.
	* covfcs/stk_discretecov.m: Add doc.

2014-08-13  Julien Bect  <julien.bect@supelec.fr>

	Use "z" instead of "x" in all stk_distrib_* functions.

	* misc/distrib/stk_distrib_normal_cdf.m: Use "z" instead of "x".
	* misc/distrib/stk_distrib_normal_ei.m: Idem.
	* misc/distrib/stk_distrib_normal_pdf.m: Idem.
	* misc/distrib/stk_distrib_student_cdf.m: Idem.
	* misc/distrib/stk_distrib_student_ei.m: Idem.
	* misc/distrib/stk_distrib_student_pdf.m: Idem.

	Provide a documentation for EI functions.

	* misc/distrib/stk_distrib_normal_ei.m: Add doc.
	* misc/distrib/stk_distrib_student_ei.m: Add doc.

2014-08-12  Julien Bect  <julien.bect@supelec.fr>

	Improve Octave packaging.

	* admin/make_octave_package.m: Delete rename_mex.sed after
	use. Rename test script.
	* admin/MAKE_OCTAVE_PACKAGE.md: New doc file (in markdown).
	* admin/octave-pkg/test_package.m: Renamed to
	* admin/octave-pkg/pkg_install_stk_and_generate_doc.m: Renamed
	from.

2014-08-10  Julien Bect  <julien.bect@supelec.fr>

	stk_example_misc04.m: Fix property name.
